# pgfusion

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile  pg-test-config.toml  pgfusion_config.toml
.config/: nextest.toml
benches/: bench_lib.sh  config.rs  pipeline.rs  queries.rs  query_bench.rs
benches/clickbench/: heatmap.html  results.json  run.sh  setup.sh
benches/clickbench/checkpoints/317857b-single_iter_query_output/: results.csv  results.json
benches/clickbench/checkpoints/317857b-single_iter_query_output/output/: Q0_pgfusion.txt  Q0_postgres.txt  Q10_pgfusion.txt  Q11_pgfusion.txt  Q12_pgfusion.txt  Q13_pgfusion.txt  Q14_pgfusion.txt  Q15_pgfusion.txt  Q16_pgfusion.txt  Q17_pgfusion.txt  Q18_pgfusion.txt  Q19_pgfusion.txt  Q19_postgres.txt  Q1_pgfusion.txt  Q1_postgres.txt  Q20_pgfusion.txt  Q20_postgres.txt  Q21_pgfusion.txt  Q22_pgfusion.txt  Q23_pgfusion.txt  Q24_pgfusion.txt  Q24_postgres.txt  Q25_pgfusion.txt  Q26_pgfusion.txt  Q27_pgfusion.txt  Q28_pgfusion.txt  Q29_pgfusion.txt  Q29_postgres.txt  Q2_pgfusion.txt  Q2_postgres.txt  Q30_pgfusion.txt  Q31_pgfusion.txt  Q32_pgfusion.txt  Q33_pgfusion.txt  Q34_pgfusion.txt  Q35_pgfusion.txt  Q36_pgfusion.txt  Q37_pgfusion.txt  Q38_pgfusion.txt  Q39_pgfusion.txt  (+14 more)
benches/clickbench/checkpoints/current/: results.csv
benches/clickbench/checkpoints/f85939b-initial-results/: heatmap.html  results.json
benches/clickbench/checkpoints/init_results/: heatmap.html
benches/common/: mod.rs
benches/tpch/: create.sql  results.csv  results.json  run.sh  setup.sh
benches/tpch/checkpoints/current/: results.csv
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: BENCHMARKING.md  CONTRIBUTING.md  DEPLOYMENT.md  TESTING.md
examples/: README.md  count_query.rs
examples/client/go/: go.mod  go.sum  main.go
examples/client/java/: build.gradle  settings.gradle
examples/client/java/src/main/java/io/pgfusion/client/: FlightSqlClient.java
examples/client/python/: README.md  adbc.py  cx_client.py  ibis_client.py
examples/client/rust/: flight_sql.rs
examples/client/sql/: duckdb.sql
examples/client/typescript/: flight_sql_client.ts  package.json
examples/lib/rust/: count_query.rs
src/: config.rs  datasource.rs  lib.rs  main.rs  session.rs  snapshot.rs
src/cli/: completer.rs  exec.rs  main.rs  mod.rs  repl.rs
src/server/: main.rs  mod.rs
tests/: consistency.rs  sql_correctness.rs
tests/consistency/: run.sh
tests/sql_correctness/: run.sh
tests/sql_correctness/queries/: query_aggregates.sql  query_complex_analytics.sql  query_compute_bound.sql  query_conditional_logic.sql  query_cross_join.sql  query_cte_queries.sql  query_extreme_values.sql  query_having_filter.sql  query_history_analysis.sql  query_join_queries.sql  query_memory_bound.sql  query_multi_join.sql  query_nested_aggregates.sql  query_ordering_limits.sql  query_scan_filter.sql  query_select_only.sql  query_set_operations.sql  query_simple_select.sql  query_string_operations.sql  query_subqueries.sql  query_type_casting.sql  query_window_functions.sql
tests/sql_correctness/snapshots/: query_aggregates__1.snap  query_aggregates__2.snap  query_aggregates__3.snap  query_aggregates__5.snap  query_aggregates__6.snap  query_aggregates__7.snap  query_complex_analytics__1.snap  query_compute_bound__2.snap  query_compute_bound__4.snap  query_compute_bound__6.snap  query_compute_bound__7.snap  query_conditional_logic__1.snap  query_cross_join__1.snap  query_cross_join__2.snap  query_cross_join__3.snap  query_cross_join__4.snap  query_cte_queries__1.snap  query_cte_queries__2.snap  query_cte_queries__3.snap  query_extreme_values__1.snap  query_extreme_values__2.snap  query_extreme_values__3.snap  query_extreme_values__4.snap  query_extreme_values__5.snap  query_extreme_values__7.snap  query_extreme_values__8.snap  query_having_filter__1.snap  query_having_filter__2.snap  query_having_filter__3.snap  query_having_filter__4.snap  query_having_filter__5.snap  query_history_analysis__1.snap  query_history_analysis__2.snap  query_history_analysis__3.snap  query_history_analysis__4.snap  query_join_queries__1.snap  query_join_queries__2.snap  query_join_queries__3.snap  query_multi_join__1.snap  query_multi_join__2.snap  (+44 more)
