[package]
name = "pgfusion"
version = "0.1.0"
edition = "2024"

[dependencies]
pg_arrow = { git = "ssh://git@github.com/pg-arrow/pg-arrow.git", branch = "main" }

serde = { version = "1.0", features = ["derive"] }
toml = "1.1.0"
derive-where = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
arrow = "58.0.0"
datafusion = "53.0.0"
tokio = { version = "1.51.1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
tokio-util = "0.7"
async-trait = "0.1.89"
futures = "0.3.32"
clap = { version = "4", features = ["derive"] }
rustyline = "18.0.0"
mimalloc = "0.1"

[lib]
name = "pgfusion_lib"
path = "src/lib.rs"

[[bin]]
name = "pgfusion_cli"
path = "src/cli/main.rs"

[[bin]]
name = "pgfusion_server"
path = "src/server/main.rs"

[dev-dependencies]
criterion = { version = "0.6", features = ["async_tokio"] }

[[bench]]
name = "query_bench"
harness = false

[profile.release]
debug = true
