[package]
name = "pgfusion"
version = "0.1.0"
edition = "2024"

[dependencies]
pg_arrow = { path = "../pg_arrow" }

serde = { version = "1.0", features = ["derive"] }
toml = "1.1.0"
derive-where = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
arrow = { version = "58.0.0", features = ["prettyprint"] }
datafusion = "53.0.0"
tokio = { version = "1.51.1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
tokio-util = "0.7"
tokio-postgres = "0.7"
async-trait = "0.1.89"
futures = "0.3.32"
clap = { version = "4", features = ["derive"] }
rustyline = { version = "18.0.0", features = ["derive"] }
mimalloc = "0.1"
rustyline-derive = "0.12.0"

[lib]
name = "pgfusion_lib"
path = "src/lib.rs"

[[bin]]
name = "pgfusion_cli"
path = "src/cli/main.rs"

[[bin]]
name = "pgfusion_server"
path = "src/server/main.rs"

[[example]]
name = "count_query"
path = "examples/lib/rust/count_query.rs"

[[example]]
name = "flight_sql_client"
path = "examples/client/rust/flight_sql.rs"

[dev-dependencies]
arrow-flight = { version = "=58.0.0", features = ["flight-sql"] }
criterion = { version = "0.6", features = ["async_tokio"] }
pg-test-harness = { git = "ssh://git@github.com/pg-arrow/utils.git", rev = "18e96545e741c4f0b8a759c099b8c12e7f638fde" }
tonic = "0.14.6"
insta = { version = "1", features = ["glob"] }

[[bench]]
name = "query_bench"
harness = false

[profile.coverage]
inherits = "test"

[profile.release]
debug = true
opt-level = 3 # Maximize optimizations
# lto = "fat"       # "Fat" Link Time Optimization (cross-crate SIMD optimization)
# codegen-units = 1 # Reduces parallelism during build to improve binary performance
panic = "abort" # Reduces binary size and improves performance slightly
strip = true    # Removes debug symbols to keep the binary small
