[package]
name = "pgfusion"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "An Apache Arrow-native analytical query engine for PostgreSQL data files. Zero-ETL OLAP sidecar built on Apache DataFusion and pg_arrow."
license = "Apache-2.0"
repository = "https://github.com/pg-arrow/pgfusion"
homepage = "https://github.com/pg-arrow/pgfusion"
documentation = "https://docs.rs/pgfusion"
readme = "README.md"
keywords = ["postgres", "postgresql", "arrow", "datafusion", "olap"]
categories = ["database", "command-line-utilities"]

[dependencies]
pg_arrow = { git = "ssh://git@github.com/pg-arrow/pg_arrow.git", rev = "76ba2c73a1740743f7caa8e22470b6d8ca75c9c2" }

serde = { version = "1.0", features = ["derive"] }
toml = "1.1.0"
derive-where = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
arrow = { version = "58.0.0", features = ["prettyprint"] }
datafusion = "53.0.0"
tokio = { version = "1.51.1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
tokio-util = "0.7"
tokio-postgres = "0.7"
async-trait = "0.1.89"
futures = "0.3.32"
clap = { version = "4", features = ["derive"] }
rustyline = { version = "18.0.0", features = ["derive"] }
mimalloc = "0.1"
anyhow = "1"
rustyline-derive = "0.12.0"
tikv-jemallocator = { version = "0.6", optional = true }

[features]
jemalloc = ["tikv-jemallocator"]

[lib]
name = "pgfusion_lib"
path = "src/lib.rs"

[[bin]]
name = "pgfusion_cli"
path = "src/cli/main.rs"

[[bin]]
name = "pgfusion_server"
path = "src/server/main.rs"

[[example]]
name = "count_query"
path = "examples/lib/rust/count_query.rs"

[[example]]
name = "flight_sql_client"
path = "examples/client/rust/flight_sql.rs"

[dev-dependencies]
arrow-flight = { version = "=58.0.0", features = ["flight-sql"] }
criterion = { version = "0.6", features = ["async_tokio"] }
pg-test-harness = { git = "ssh://git@github.com/pg-arrow/utils.git", rev = "18e96545e741c4f0b8a759c099b8c12e7f638fde" }
tonic = "0.14.6"
insta = { version = "1", features = ["glob"] }

[[bench]]
name = "queries"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "config"
harness = false

[profile.coverage]
inherits = "test"

[profile.profiling]
inherits = "release"
debug = true         # Keep debug symbols for profiler stack traces
strip = false        # Don't strip symbols

[profile.release]
debug = false
opt-level = 3 # Maximize optimizations
# lto = "fat"       # "Fat" Link Time Optimization (cross-crate SIMD optimization)
# codegen-units = 1 # Reduces parallelism during build to improve binary performance
panic = "abort" # Reduces binary size and improves performance slightly
strip = true    # Removes debug symbols to keep the binary small
